--- a/form/form.html
+++ b/form/form.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>A form</title>
+	<link href="payment-form.css" rel="stylesheet">
+	<!--
 	<style>
 		form {
 		  /* 居中表单 */
@@ -61,9 +63,11 @@
 		  margin-left: .5em;
 		}
 	</style>
+	-->
 </head>
 
 <body>
+<!--
 	<form action="/my-handling-form-page" method="post">
 		<div>
 			<label for="name">Name:</label>
@@ -81,6 +85,84 @@
 			<button type="submit"> Send your message</button>
 		</div>
 	</form>
+-->
+<form>
+	<h1>Payment form</h1>
+	<p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
+	<section>
+		<h2>Contact information</h2>
+		<fieldset>
+			<legend>Title</legend>
+			<ul>
+				<li>
+					<label for="title_1">
+						<input type="radio" id="title_1" name="title_1" value="M.">Mister
+					</label>
+				</li>				
+				<li>
+					<label for="title_2">
+						<input type="radio" id="title_2" name="title_2" value="Ms.">Miss
+					</label>
+				</li>
+			</ul>
+		</fieldset>
+		<p>
+			<label for="name">
+				<span>Name: "</span>
+				<strong><abbr title="required">*</abbr>
+				</strong>
+			</label>
+			<input type="text" id="name" name="username">
+		</p>
+		<p>
+			<label for="mail">
+				<span>E-mail: </span>
+				<strong><abbr title="required">*</abbr>
+				</strong>				
+			</label>
+			<input type="mail" id="mail" name="usermail">
+		</p>
+		<p>
+			<label for="pwd">
+				<span>Password: </span>
+				<strong><abbr title="required">*</abbr>
+				</strong>				
+			</label>
+			<input type="password" id="pwd" name="password">
+		</p>
+	</section>
+	<section>
+		<h2>Payment information</h2>
+		<p>
+			<label for="card">
+				<span>Card type: </span>
+			</label>
+			<select id="card" name="usercard">
+				<option value="visa">Visa</option>
+				<option value="mc">Mastercard</option>
+				<option value="amex">American Express</option>
+			</select>
+		</p>
+		<p>
+			<label for="number">
+				<span>Card number: </span>
+				<strong><abbr title>*</abbr></strong>
+			</label>
+			<input type="text" id="number" name="cardnumber">
+		</p>
+		<p>
+			<label for="date">
+				<span>Expiration date: </span>
+				<strong><abbr title>*</abbr></strong>
+				<em>formatted as mm/yy</em>
+			</label>
+			<input type="text" id="date" name="expiration">
+		</p>
+	</section>
+	<p>
+		<button type="submit">Validate the payment</button>
+	</p>
+</form>
 </body>
 
 <footer></footer>
