--- a/form/fruit-start - 副本.html
+++ b/form/fruit-start - 副本.html
@@ -119,7 +119,7 @@
   var email=document.getElementById('t2');
   email.addEventListener("input",function(event) {
     if(email.validity.typeMismatch){
-      email.setCustomValidity("I expect an e-mail, darling!");
+      email.setCustomValidity("I expect an e-mail, fuck you!");
     }else{
       email.setCustomValidity("");
     }
