--- a/form/fruit-start.html
+++ b/form/fruit-start.html
@@ -4,14 +4,32 @@
 <head>
     <meta charset="utf-8">
     <title>Favorite fruit start</title>
-    <style>
+    <link href="fruit-start.css" rel="stylesheet">
+    <!--<style>
       input:invalid {
         border: 2px dashed red;
       }
       input:valid {
         border: 2px solid black;
       }
-    </style>
+      .select{
+        position: relative;
+        display: inline-block;
+      }
+      .select:focus{
+        outline: none;
+        box-shadow: 0 0 3px 1px #227755;
+      }
+      .select .optList{
+        position: absolute;
+        top: 100%;
+        left: 0;
+      }
+      .select .optList.hidden{
+        max-height: 0;
+        visibility: hidden;
+      }
+    </style>-->
 </head>
 
 <body>
@@ -20,6 +38,33 @@
       <input id="choose" name="i_like" required pattern="banana|cherry">
       <button>Submit</button>
     </form>
-</body>
+    <hr>
+    <form>
+      <select name="myFruit">
+        <option>Cherry</option>
+        <option>Lemon</option>
+        <option>Banana</option>
+        <option>Strawberry</option>
+        <option>Apple</option>
+      </select>
 
+      <div class="select" tabindex="0">
+        <span class="value">Cherry</span>
+        <ul class="optList hidden">
+          <li class="option">Cherry</li>
+          <li class="option">Lemon</li>
+          <li class="option">Banana</li>
+          <li class="option">Strawberry</li>
+          <li class="option">Apple</li>
+        </ul>
+      </div>
+    </form>
+    <script src="fruit-start.js">
+      /*window.addEventListener("load",function () {
+        document.body.classList.remove("no-widget");
+        document.body.classList.add("widget");
+      s});
+      */
+    </script>
+</body>
 </html>
