--- a/form/fruit-start.html
+++ b/form/fruit-start.html
@@ -63,8 +63,6 @@
       /*window.addEventListener("load",function () {
         document.body.classList.remove("no-widget");
         document.body.classList.add("widget");
-      s});
-      */
-    </script>
+      s});*/</script>
 </body>
 </html>
