--- a/form/fruit-start.html
+++ b/form/fruit-start.html
@@ -58,6 +58,14 @@
           <li class="option">Apple</li>
         </ul>
       </div>
+      <input type="search" placeholder=" search">
+      <input type="text" placeholder=" input">
+      <textarea placeholder="textarea"></textarea>
+      <button>Fuck</button>
+      <fieldset>
+        <legend>Hi!</legend>
+        <h1>Hello</h1>
+      </fieldset>
     </form>
     <script src="fruit-start.js">
       /*window.addEventListener("load",function () {
