--- a/javaScript/paraOne/index.html
+++ b/javaScript/paraOne/index.html
@@ -14,7 +14,7 @@
     <div>
       <label for="customname">Enter custom name:</label>
       <input id="customname" type="text" placeholder="">
-    </div>
+    </div>z
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
       <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
