--- a/javaScript/paraTwo/index.html
+++ b/javaScript/paraTwo/index.html
@@ -18,19 +18,24 @@
       .msgBox p {
         line-height: 1.5;
         padding: 10px 20px;
+        font-family: sans-serif;
         color: white;
         padding-left: 82px;
         background-position: 25px center;
         background-repeat: no-repeat;
       }
       .msgBox button {
-        background: none;
+        background: red;
         border: none;
+        border-radius: 2px;
         position: absolute;
         top: 5px;
         right: 5px;
-        font-size: 1.1rem;
-        color: red;
+        font-size: 1rem;
+        color: white;
+      }
+      .msgBox button:hover {
+        box-shadow: 0px 0px 8px blue;
       }
     </style>
   </head>
