--- a/javaScript/paraOne/index.html
+++ b/javaScript/paraOne/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Silly story generator</title>
 
-
   </head>
 
   <body>
     <div>
       <label for="customname">Enter custom name:</label>
       <input id="customname" type="text" placeholder="">
-    </div>z
+    </div>
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
       <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
